--- a/main.tex
+++ b/main.tex
@@ -91,7 +91,7 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 \end{tikzpicture}
 
 
-Because of the poles, every location on Earth cannot be equally quantified with only one set of coordinates. This can be plainly seen on a typical flat map, such as a Mercator Projection. Land proportions grow the closer to a pole they are, making Greenland appear massive, and the Sahara proportionally far smaller. Furthermore, because the poles have in a sense been unraveled, the South Pole, which ought to be a single point, is an entire line along the southern edge of the map. A proportionally accurate projection of the Earth onto a flat surface requires at least two separate maps. For instance, you could have a map of the top hemisphere, centered at the north pole, and then of the bottom hemisphere, centered at the south pole. The Earth then motivates the introduction of \textbf{manifolds}. 
+Because of the poles, every location on Earth cannot be equally quantified with only one set of coordinates. This can be plainly seen on a typical flat map, such as a Mercator Projection. Land proportions grow the closer to a pole they are, making Greenland appear massive, and the Sahara proportionally far smaller. Furthermore, and more importantly, because the poles have in a sense been unraveled, the South Pole, which ought to be a single point, is an entire line along the southern edge of the map. A projection of the Earth onto a flat surface, such that one point on the Earth maps to one point on the surface, requires at least two separate maps. For instance, you could have a map of the top hemisphere, centered at the north pole, and then of the bottom hemisphere, centered at the south pole. The Earth, then, is an example of a \textbf{manifold}. 
 
 
 \textbf{Insert a picture of the Mercator Projection}
@@ -196,8 +196,13 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 
 We began our discussion of manifolds by assigning real number values to individual points on a more abstract space. This related to the determination of physical cases, given some set of possibilities, and we were able to define coordinate systems. We will now be extending that process to arbitrary submanifolds, such that we will be able to assign real numbers to lines, areas, bodies, etc., corresponding to some physical property of that object. This may sound much more abstract than it actually is. In reality, all that we are doing here is quantifying and mathematically formalizing scientific investigation with as few tools as possible. 
 
-For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. Denote the work done on the baseball as $W$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $a, b,$ and $c$, such that $a \in \lambda$ is the starting point of the path, $c \in \lambda$ is the ending point of the path, and $b$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{a\to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c}).\end{gather} That is, we can say that the work done over the entire path is equal to the work done over one portion of the path plus the work done over the rest of the path. It follows, therefore, that we can break up the path into as many finite paths as we want, determine the work on each of them, and sum them to get the overall work. In other words, \begin{gather} W(\lambda) = \sum_{i=1}^{n} W(\lambda_i) \end{gather} for a line split into $n$ pieces (not necessarily equally large). The function $W$ is therefore linear. We call such a function a 1-functional, or a linear functional over 1-surfaces. 
+For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $a, b,$ and $c$, such that $a \in \lambda$ is the starting point of the path, $c \in \lambda$ is the ending point of the path, and $b$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{a\to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c}).\end{gather} That is, we can say that the work done over the entire path is equal to the work done over one portion of the path plus the work done over the rest of the path. It follows, therefore, that we can break up the path into as many finite paths as we want, determine the work on each of them, and sum them to get the overall work. In other words, \begin{gather} W(\lambda) = \sum_{i=1}^{n} W(\lambda_i) \end{gather} for a line split into $n$ pieces (not necessarily equally large). We require, however, that the ends are stuck exactly end-to-end (that is, the components overlap on their boundaries). The function $W$ is therefore linear. We call such a function a 1-functional, or a linear functional over 1-surfaces. 
 
+As another example, consider a surface $\sigma$, and a function $\Phi: S^2 \to \mathbb{R}$ that determines magnetic flux, such that $\Phi(\sigma)$ is the magnetic flux through $\sigma$. Similarly to in the case with $\lambda$, we may break up $\sigma$ into finite constituent pieces, attached side-to-side. We therefore have that \begin{gather} \Phi(\sigma) = \sum_{i=1}^n \Phi(\sigma_i) \end{gather} for $\sigma$ broken up into $n$ different pieces, requiring once again that the pieces are stuck exactly side-to-side. We call $\Phi$ a 2-functional, or a linear function over 2-surfaces. 
+
+This sort of linear functions over objects extends to the general kth case. We define therefore \textbf{k-functionals} $f_k : S^k \to \mathbb{R}$ as linear functionals over k-surfaces, meaning that such a functional applied over the entire k-surface is equivalent to applying the functional to component pieces of the k-surface and summing the contributions, as long as the components overlap only on their boundaries. 
+
+One more specification is necessary: the fact that $f_k$ must commute with the limit. Consider a straight line $\lambda$ with components in $x$ and $y$. The length $L$ of $\lambda$ is thus $L = \sqrt(x^2 + y^2)$. This is emphatically \emph{not} the same as the sum of the lengths of each of the components, which would be $|x| + |y|$. In other words, the length of the limit is not the limit of the length. 
 
 
 
@@ -211,8 +216,6 @@ For example, consider a topographic map of the Earth (a map distinguishing eleva
 	II. $f_k$ commutes with the limit. That is, the limit of the function is the function of the limit. 
 \end{defn}
 
-\textbf{Still not a clear explanation}
-The second point in this definition must be remarked on, and it will be clarified with an example: the length of a line is not a k-functional. The length of a line $\lambda$ is equal to the sum of the magnitudes in the length's constituent directions. So, for a line $\lambda \in \mathbb{R}^2$ with components x and y, the length $L = \sqrt{x^2 + y^2}$. This is \emph{not} the same as the sum of the individual lengths, which would be just $x + y$. Simply put, the length of the limit is not the same thing as the limit of the length. 
 
 
 \begin{defn}
